# archive

./: .justfile  index.d.ts  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts  tailwind.config.js
.github/workflows/: deploy.yaml
content/: Creation Myth.md  Lacuna.md  Vyre, the Inverted City.md  index.md
content/Althane/: index.md
content/Althane/Ancestry/: Realmtouched.md  Rule of Beasts.md  Spark of Humanity.md  Visitors from Beyond.md  index.md
content/Althane/Divinity/: Beast.md  Creation Myth.md  Nox.md  The Deep.md  The Stranger.md
content/Althane/Location/: No Man's Land.md  The Occident.md  index.md
content/Althane/Natural Phenomena/: Cycle.md  Mycelia.md  Sanguis Bestrum.md  Sanguis Depsics.md  Sanguis Noxa.md  Starfont.md  Tidal.md  Zephyr.md  index.md
content/Althane/Organization/: Alter and Associates.md  Ashwright Armory.md  Barkweb Circle.md  Children of the Scale.md  Church of Shadow.md  Church of the Thirteenth Realm.md  (+26 more)
content/Ancestry/: Realmtouched.md
content/Astra/: index.md
content/Faerrin/: index.md
content/Færrin/: index.md
content/Syrin/: index.md
content/Urth/: index.md
content/Ushas/: index.md
content/notes/: Vyre, the Inverted City.md
embedding/: pyproject.toml
embedding/embedding/: embed.py  search.py
quartz/: build.ts
quartz/cli/: handlers.js
quartz/components/: Ai.tsx  Backlinks.tsx  Footer.tsx  PageList.tsx  PageTitle.tsx  RecentNotes.tsx  TagList.tsx  Theme.tsx  index.ts
quartz/processors/: emit.ts  parse.ts
quartz/styles/: base.scss  custom.scss
quartz/util/: theme.ts
(+209 files in other folders)
