[tool.poetry]
name = "embedding"
version = "0.1.0"
description = ""
authors = ["Joshua Bassin <josh.r.bassin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# fastembed = "^0.3.4"
qdrant-client = {extras = ["fastembed"], version = "^1.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
